k8s-scripts/ingress/simple-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-svc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: healthcheck-test
